--- a/app/templates/fwd/index.html
+++ b/app/templates/fwd/index.html
@@ -6,22 +6,28 @@
 {% block body %}
 <div class="container">
     <div class="row">
-        <div class="col md-12">
+        <div class="col md-8">
             <div class="jumbotron p-3">
-                <h2>Manage <b>CallForward </b>  <button type="button"  class="btn btn-success float-right"
-                data-toggle="modal" data-target="#mymodal">Add New Forward</button> </h2>
+                <h2 class="display-4">Manage <b >CallForward </b>  </h2>
+            </div>
+        </div>
+        <div class="col md-4">
+            <button type="button"  class="btn btn-success float-right"
+            data-toggle="modal" data-target="#mymodal">Add New Forward</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col md-12">
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
-
-    {% for message in messages %}
-                <div class="alert alert-success alert-dismissable" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                        <span aria-hidden="true">x</span>
-                    </button>
-                {{message}}
-                </div>
-                {% endfor %}
-
+                    {% for message in messages %}
+                        <div class="alert alert-success alert-dismissable" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                            <span aria-hidden="true">x</span>
+                            </button>
+                            {{message}}
+                        </div>
+                    {% endfor %}
                 {% endif %}
                 {% endwith %}
 
