--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,24 +6,30 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col md-12">
-            <div class="jumbotron p-3">
-                <h2>Manage <b>CallForward </b>  <button type="button"  class="btn btn-success float-right"
-                data-toggle="modal" data-target="#mymodal">Add New Forward</button> </h2>
-                {% with messages = get_flashed_messages() %}
-                {% if messages %}
+        <div class="jumbotron p-3">
+        <div class="col md-8">
 
+                <h2 class="display-4">Manage <b >CallForward </b>  </h2>
+        </div>
+        <div class="col md-4">
+            <button type="button"  class="btn btn-success float-right"
+            data-toggle="modal" data-target="#mymodal">Add New Forward</button>
+        </div>
+        </div>
+    </div>
+    <div class="row">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
                 {% for message in messages %}
                 <div class="alert alert-success alert-dismissable" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="close">
                         <span aria-hidden="true">x</span>
                     </button>
-                {{message}}
+                    {{message}}
                 </div>
                 {% endfor %}
-
-                {% endif %}
-                {% endwith %}
+            {% endif %}
+        {% endwith %}
 
                 <table class="table table-hover table-striped">
                     <tr>
@@ -85,29 +91,26 @@
         <div class="modal-content">
         <div class="modal-header"><h4 class="modal-title">Add Call Forward</h4></div>
     <div class="modal-body">
-     <form action="{{url_for('main.insert')}}" method="POST">
-         {{ form.hidden_tag() }}
+     <form action="{{url_for('main.insert')}}" method="POST", role="form">
+         {{ form.csrf_token() }}
       <div class="form-group">
-          {{ form.exten.label }}: {{ form.exten(size=4) }}
+          {{ wtf.form_field(form.exten, class='form-control',placeholder="User") }}
       </div>
       <div class="form-group">
-          {{ form.forward_phone.label }}: {{ form.forward_phone(size=11) }}
+          {{ wtf.form_field(form.forward_phone, class='form-control',placeholder="Forward_phone") }}
       </div>
       <div class="col-auto">
-          {{ form.timeout.label }}:{{ form.timeout }}
+          {{ wtf.form_field(form.timeout) }}
       </div>
-      <div class="form-group">
-          {{ form.submit() }}
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" >Submit</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
      </form>
     </div>
-    <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    </div>
+
    </div>
    </div>
   </div>
  </div>
- </div>
-</div>
 {% endblock %}
