--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,38 @@
-{% extends 'bootstrap/base.html' %}
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+        <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
+<script type="text/javascript" language="javascript">
+$(document).ready(function(){
+    var dataTable = $('#sample_data').DataTable( {
+        "paging":   true,
+        "ordering": true,
+        "info":     true,
+        "lengthMenu": [[3, 5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "All"]],
+        "columns": [
+            null,
+            null,
+            { orderable: false },
+            { orderable: false }
+            ]
+    });
+});
+</script>
+    </head>
+
+
+
 {% block title %}
     <h3>PBX Portal</h3>
 {% endblock %}
-
 {% block navbar %}
     <nav class="navbar navbar-default">
         <div class="container">
@@ -31,39 +61,4 @@
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
     </div>
-{% endblock %}
-{% block script %}
-{{ super() }}
-<script>
-$(document).ready(function () {
-    $('.edit-modal-opener').click(function () {
-        var url = $(this).data('whatever');
-        $.get(url, function (data) {
-            $('#Modal .modal-content').html(data);
-            $('#Modal').modal();
-            $('#submit').click(function (event) {
-                event.preventDefault();
-                $.post(url, data = $('#ModalForm').serialize(), function (
-                    data) {
-                    if (data.status == 'ok') {
-                        $('#Modal').modal('hide');
-                        location.reload();
-                    } else {
-                        var obj = JSON.parse(data);
-                        for (var key in obj) {
-                            if (obj.hasOwnProperty(key)) {
-                                var value = obj[key];
-                            }
-                        }
-                        $('.help-block').remove()
-                        $('<p class="help-block">' + value + '</p>')
-                            .insertAfter('#' + key);
-                        $('.form-group').addClass('has-error')
-                    }
-                })
-            });
-        })
-    });
-});
-</script>
 {% endblock %}
