--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,38 @@
-{% extends 'bootstrap/base.html' %}
-{% block title %}
-    <h3>PBX Portal</h3>
-{% endblock %}
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+        <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.1/bootstrap3-editable/js/bootstrap-editable.js"></script>
+<script type="text/javascript" language="javascript">
+$(document).ready(function(){
+    var dataTable = $('#sample_data').DataTable( {
+        "paging":   true,
+        "ordering": true,
+        "info":     true,
+        "lengthMenu": [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]],
+        "columns": [
+            null,
+            null,
+            { orderable: false },
+            { orderable: false }
+            ]
+    });
+});
+</script>
+    </head>
 
+
+
+{#{% block title %}#}
+{#    <h3>PBX Portal</h3>#}
+{#{% endblock %}#}
 {% block navbar %}
     <nav class="navbar navbar-default">
         <div class="container">
@@ -15,10 +45,28 @@
                 </button>
                 <a class="navbar-brand" href="{{ url_for('main.index') }}">PBX Portal</a>
             </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ url_for('main.index') }}">Home</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if current_user.is_anonymous %}
+                        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                    {% else %}
+                        <li><a class="nav-link" role="button" data-toggle="tooltip" data-html="true"
+                               href="{{ url_for('auth.logout') }}"
+                               title="{{ current_user.fullname }}
+{{ current_user.company }}
+{{ current_user.department }}
+{{ current_user.title }}">Logout</a></li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
     </nav>
 {% endblock %}
 {% block content %}
+
     <div class="container">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -27,7 +75,6 @@
             {% endfor %}
         {% endif %}
         {% endwith %}
-
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
     </div>
