--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@ $(document).ready(function(){
         "paging":   true,
         "ordering": true,
         "info":     true,
-        "lengthMenu": [[3, 5, 10, 25, 50, -1], [3, 5, 10, 25, 50, "All"]],
+        "lengthMenu": [[5, 10, 25, 50, -1], [5, 10, 25, 50, "All"]],
         "columns": [
             null,
             null,
@@ -30,9 +30,9 @@ $(document).ready(function(){
 
 
 
-{% block title %}
-    <h3>PBX Portal</h3>
-{% endblock %}
+{#{% block title %}#}
+{#    <h3>PBX Portal</h3>#}
+{#{% endblock %}#}
 {% block navbar %}
     <nav class="navbar navbar-default">
         <div class="container">
@@ -45,10 +45,28 @@ $(document).ready(function(){
                 </button>
                 <a class="navbar-brand" href="{{ url_for('main.index') }}">PBX Portal</a>
             </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="{{ url_for('main.index') }}">Home</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    {% if current_user.is_anonymous %}
+                        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                    {% else %}
+                        <li><a class="nav-link" role="button" data-toggle="tooltip" data-html="true"
+                               href="{{ url_for('auth.logout') }}"
+                               title="{{ current_user.fullname }}
+{{ current_user.company }}
+{{ current_user.department }}
+{{ current_user.title }}">Logout</a></li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
     </nav>
 {% endblock %}
 {% block content %}
+
     <div class="container">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -57,7 +75,6 @@ $(document).ready(function(){
             {% endfor %}
         {% endif %}
         {% endwith %}
-
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
     </div>
