--- a/app/templates/fwd/index.html
+++ b/app/templates/fwd/index.html
@@ -68,7 +68,7 @@
          </div>
          <div class="form-group">
           <label>Timeout:</label>
-          <input type="number" class="form-control" name="timeout" value="{{row.tomeout}}">
+          <input type="number" class="form-control" name="timeout" value="{{row.timeout}}">
          </div>
          <div class="form-group">
           <button class="btn btn-primary" type="submit">Update</button>
@@ -85,7 +85,7 @@
     </table>
    </div>
 
-  <!-- Modal Add Employee-->
+  <!-- Modal Add CLID-->
   <div id="mymodal" class="modal fade" role="dialog">
       <div class="modal-dialog">
      <div class="modal-content">
