--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container" xmlns="http://www.w3.org/1999/html">
     <div class="row">
         <div class="jumbotron p-3">
         <div class="col md-8">
@@ -77,11 +77,11 @@
          <div class="col-auto">
           {{ wtf.form_field(form.timeout) }}
          </div>
-         </div>
             <div class="modal-footer">
             <button class="btn btn-primary" type="submit">Update</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
+        </form>
         </div>
       </div>
       </div>
