--- a/app/templates/pbx/alarm.html
+++ b/app/templates/pbx/alarm.html
@@ -55,7 +55,7 @@
                         {% if row.active %}
                             <input type="checkbox" name="active" checked="checked", data-active_id="{{ row.id }}", class="checkbox_check">
                         {% else %}
-                            <input type="checkbox" name="active", id="checkbox_check", onclick="return false;">
+                            <input type="checkbox" name="active", id="checkbox_check", data-active_id="{{ row.id }}", class="checkbox_check">
 
                          {% endif   %}
                         </td>
